initial implementation of a geting channels stat scheduler
